<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lin.afinal.TabFragment1"
    android:background="@drawable/ti"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="193dp">

        <RelativeLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/li1"
            android:background="@color/weatherbgcolor">

            <TextView
                android:text="@string/wtmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wtemp"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_below="@+id/wwd"
                android:layout_alignStart="@+id/wwd"
                android:layout_marginTop="12dp" />

            <TextView
                android:text="週四"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wweek"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_below="@+id/wtemp"
                android:layout_alignStart="@+id/wtemp"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/weather"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/wcity"
                android:layout_alignStart="@+id/wcity"
                android:layout_width="100dp" />

            <TextView
                android:text="@string/cityname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:id="@+id/wcity"
                android:textColor="@color/weathertextcolor"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/mo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wmoth2"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_alignBaseline="@+id/wmoth"
                android:layout_alignBottom="@+id/wmoth"
                android:layout_toEndOf="@+id/wmoth" />

            <TextView
                android:text="11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wday"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_alignBaseline="@+id/wmoth2"
                android:layout_alignBottom="@+id/wmoth2"
                android:layout_toEndOf="@+id/wmoth2" />

            <TextView
                android:text="@string/wcould"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wwd"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/weather" />

            <TextView
                android:text="@string/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wday2"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_alignBaseline="@+id/wweek"
                android:layout_alignBottom="@+id/wweek"
                android:layout_toEndOf="@+id/wday" />

            <TextView
                android:text="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wmoth"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_alignBaseline="@+id/wweek"
                android:layout_alignBottom="@+id/wweek"
                android:layout_toEndOf="@+id/wtemp" />

            <TextView
                android:text="°C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/wtemplow"
                android:layout_toEndOf="@+id/wtemplow"
                android:id="@+id/textView3"
                android:textSize="16sp"
                android:textColor="@color/weathertextcolor" />

            <TextView
                android:text="級"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wwdlow1"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_alignBaseline="@+id/textView6"
                android:layout_alignBottom="@+id/textView6"
                android:layout_toEndOf="@+id/textView6" />

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/wtemplow"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_alignBaseline="@+id/wtemp"
                android:layout_alignBottom="@+id/wtemp"
                android:layout_toEndOf="@+id/wtemp"
                android:layout_width="20dp" />

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="@color/weathertextcolor"
                android:textSize="16sp"
                android:layout_width="15dp"
                android:layout_alignBaseline="@+id/wwd"
                android:layout_alignBottom="@+id/wwd"
                android:layout_toEndOf="@+id/wwd" />

            <ImageView
                android:layout_height="match_parent"
                app:srcCompat="@drawable/s01"
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:id="@+id/li2"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/weatherbgcolor"
        android:weightSum="1">

    </LinearLayout>

</LinearLayout>
